# test

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello.c  lamba.cpp
ASIO/: a.out  asio.cpp  timer5.cpp
GDB/: hello  hello.c  main.c  sample  sample.c  stack  stack.c
atomic/: a.out  atomic  atomic.cpp  atomicmutex.cpp
base64/: a.out  base64.cpp
binarysearch/: a.out  binarysearch.cpp
boost_split_string/: a.out  splitstr.cpp  spstring.cpp
boostfilesystem/: CMakeLists.txt  boostfilesystem.cpp  readme
boostfilesystem/test\dir/: boostfilesystem
callbyvalue/: a.out  callbyaddr.cpp
const/: a.out  const.cpp
crate_var_in_funtion/: a.out  malloc_var.c
escape_character/: escape_character  escape_character.cpp
gcov/: testgcov  testgcov.c  testgcov.gcda  testgcov.gcno
inheritance/: CMakeLists.txt  default_inher.cpp  inher.cpp
isalph/: a.out  isalph.cpp
lamba/: lambda_sort.cpp
lock_guard/: a.out  lock_guard.cpp
marco/: a.out  macro.cpp
memory/: a.out  malloc.c
openssl_base64/: base64.cpp
override/: a.out  override.cpp
preprocessor/: a.out  preprocessor.cpp
share_mutex/: a.out  share_mutex.cpp
shared_ptr/: shared-ptr  shared-ptr.cpp
size_test/: a.out  sizeof_diff_struct.cpp  uint32_test.cpp  zero-size_arr.cpp
so_file/: exe  main.c  vis.c
stdfilesystem/: stdfilesystem.cpp
stlref/: a.out  stlref.cpp
testboost/: a.out  timer1  timer2  timer2.cpp  timer3  timer3.cpp  timer5
testseitch/: a.out  testswitch.cpp
thread/: a.out  testthread.cpp
triplet/: a.out  triple.cpp
typedef/: typedef.cpp
typetransfer/: a.out  (+1 more)
(+2 files in other folders)
